@@ -1,3 +1,11 @@
+2008-11-05  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Dialog_Partition_Copy.cc: Fixed copy and paste partition problem.
+	  - Adjust for situation when an MSDOS partition table is in
+	  	use and a primary partition is copied and pasted into
+	    an unallocated space in an extended partition.
+	  - Closes GParted bug #556058
+
 2008-11-04  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Dialog_Progress.cc,
